--- a/practice.html
+++ b/practice.html
@@ -4,6 +4,7 @@
         <title>Practice!</title>
     </head>
     <body>
+        <h1>Practice Html File</h1>
         Hello, World!
     </body>
 </html>
